add pellet endpoints
