# src/routes/index.ts
@@ -3,6 +3,7 @@ import { BusRouters } from './bus.routes';
 import { AdminAuthRoutes } from './admin-auth.routes';
 import { CoalRoutes } from './coal.routes';
 import { PelletRoutes } from './pellet.routes';
+import { StoneRoutes } from './stone.routes';
 
 const router: Router = Router();
 
@@ -10,6 +11,7 @@ router.use('/bus', BusRouters);
 router.use('/admin-auth', AdminAuthRoutes);
 router.use('/coal', CoalRoutes);
 router.use('/pellet', PelletRoutes);
+router.use('/stone', StoneRoutes);
 
 
 export const MainRouter: Router = router;
